# goit-ds-hw-02

./: create_db.py  pyproject.toml  requirements.txt  seed.py  select_queries.py  task_management.db  task_management_select_queries.sql  task_management_table_creation.sql
